--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -8,7 +8,7 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="250dp"
+        android:layout_width="150dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:gravity="center"
@@ -16,20 +16,20 @@
         android:text="Scan  QR"
         android:textSize="18dp"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/scanner2"
-        android:layout_alignStart="@+id/scanner2" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/scanner2"
-        android:layout_width="250dp"
+        android:layout_width="fill_parent"
         android:layout_height="80dp"
-        android:layout_below="@+id/button"
         android:layout_gravity="center"
         android:gravity="center"
         android:onClick="scanBar"
         android:text="Scan bar"
         android:textSize="18dp"
-        android:layout_centerHorizontal="true">
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/button">
     </Button>
 
     <EditText
@@ -39,6 +39,7 @@
         android:inputType="textMultiLine"
         android:ems="10"
         android:gravity="top"
+        android:background="@null"
         android:id="@+id/lista"
         android:layout_below="@+id/scanner2"
         android:layout_centerHorizontal="true"
